# py-diffsol

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml
examples/: bdf_solve.py  diffsl.py  logistic_growth.py  robertson_ode.py  wip_test.py
scripts/: ci-linux-deps.sh
src/: bdf.rs  bindings.rs  builder.rs  context.rs  convert.rs  core.rs  create_binding.rs  faer_py.rs  lib.rs  matrix.rs  nalgebra_py.rs  problem.rs  py_class.rs  pyoil3_class.rs  solution.rs  solver_class.rs  stop_reason.rs
tests/: test_docs.py  test_module.py  test_solve.py  test_state.py  utils.py
