[package]
name = "py-diffsol"
version = "0.1.0"
edition = "2021"
# license = "..." FIXME add license
homepage = "https://github.com/alexallmont/py-diffsol"
repository = "https://github.com/alexallmont/py-diffsol.git"
readme = "README.md"

[lib]
name = "diffsol"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", default-features = false }
diffsol = { version = "0.2.1", features = ["diffsl-llvm16", "suitesparse"] }
numpy = { version = "0.21.0", features = ["nalgebra"] }
nalgebra = "0.33"
faer = "0.18.2"
rust-numpy = "0.1.0"

[dev-dependencies]
pyo3 = { version = "*", default-features = false, features = ["auto-initialize"] }

[build-dependencies]
pyo3-build-config = { version = "*", features = ["resolve-config"] }

[features]
extension-module = ["pyo3/extension-module"]
